kube/monitoring/uptimekuma/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: uptime-gateway
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      hostname: "uptime.kube.metalnet.org"
      port: 8443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: uptime-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-http-route
  namespace: monitoring
  annotations:
    gethomepage.dev/href: "https://uptime.kube.metalnet.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Uptime Kuma
    gethomepage.dev/app: uptime-kuma
spec:
  parentRefs:
    - name: uptime-gateway
      namespace: monitoring
      sectionName: websecure
  hostnames:
    - "uptime.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: uptimekuma-uptime-kuma
          port: 3001
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
